# emender

./: .dockerignore  .gitignore  .wg-watchdog-b4-k80-agent-445.txt  .wg-watchdog-b4-k80-agent-447.txt  .wg-watchdog-b4-k80-agent-452.txt  AGENTS.md  CLAUDE.md  NEXT_STEPS.md  README.md  codex-required-write-watchdog-b4-k80-agent462.txt  codex-required-write-watchdog-b4-k80-agent463.txt  codex-required-write-watchdog-b4-k80-agent464.txt  codex-required-write-watchdog-b4-k80-agent465.txt  codex-required-write-watchdog-b4-k80-agent466.txt  codex-required-write-watchdog-b4-k80-agent467.txt  codex-required-write-watchdog-b4-k80-agent468.txt  codex-required-write-watchdog-b4-k80-agent469.txt  codex-required-write-watchdog-b4-k80.txt  pyproject.toml  requirements.txt  train.py
docker/: release-v01-local-smoke.Dockerfile  release-v01-private-hf-smoke.Dockerfile  release-v02-local-hf-artifact-smoke.Dockerfile
docs/: AGENCY_EVOLVE_GUIDANCE.md  CLAUDE_FEEDBACK_REPAIR_QUALITY_PASS_20260528.md  CMA_FLOP_RATE_FINDING.md  DESIGN_DOSSIER.md  E63_NONLINEAR_DELTA_DESIGN.md  E88_ABLATION_NOTES.md  E88_BALANCED_CONFIG_GUIDE.md  E97_8GPU_DILOCO_VS_SINGLE_GPU_20260624.md  E97_8GPU_STATUS_SNAPSHOT_20260625_1530.md  E97_CURRENT_SMOOTHED_LOSS_BPB_20260626_1410.md  E97_LOSS_CURVE_BPB_REFRESH_20260626_1726.md  E97_LOSS_CURVE_BPB_REFRESH_20260630_0755.md  E97_LOSS_CURVE_WALLCLOCK_SCALING_20260624.md  E97_LOSS_INFO_FIGURE_20260629_0735.md  E97_RAW_1P3B_LEADERBOARD.md  EDITORIAL_NOTES_PAPER_SYNTHESIS_20260528.md  EDITORIAL_NOTES_PIPELINE_QUALITY_PASS_20260528.md  EDITORIAL_NOTES_STOCKTAKE_20260528.md  EMENDER_REPO_DRY_RUN_20260527.md  EXPRESSIVITY_RESULTS_SUMMARY.md  FRESH_E97_RUN_STATUS_20260624.md  FRONTIER_ALLOCATION_LEDGER_20260621.md  FRONTIER_CHECKPOINT_RESUME_VERIFY_20260621.md  FRONTIER_CMAES_TUNING_TRACK_20260623.md  (+137 more)
logs/: fix-2-node-e97.md  (+5 more)
(+7099 files in other folders)
